# rigidbody-physics-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  README.md
App/: AxisTheoremScene.h  CollisionResolutionDemoScene.h  Common.h  LinearMotionDemo.h  LinearMotionDemoScene.h  Main.cpp  PlayerMoveScript.cpp  PlayerMoveScript.h  RandomSpheresColliding.h  Scenes.h
Docs/: app.js
core/: app.cpp  app.h  constants.h  debug.h  renderer.cpp  renderer.h
core/Application/: App.cpp  App.h  Window.cpp
core/AssetManager/: AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
core/Collisions/: Collider.h  ContactGenerator.cpp  ContactGenerator.h  ContactResolver.cpp  ContactResolver.h
core/Events/: Event.h  Input.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
core/Includes/: PhysicsEngine.h
core/Layers/: GlobalOverlayLayer.cpp  GlobalOverlayLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  SceneLayer.cpp  SceneLayer.h  UILayer.cpp  UILayer.h
core/Physics/: ColliderComponent.h  GravityForceGenerator.cpp  GravityForceGenerator.h  IForceGenerator.h  Rigidbody.cpp  Rigidbody.h  RigidbodyComponent.h  RigidbodyForceRegistry.cpp  RigidbodyForceRegistry.h  RigidbodyWorld.h
core/Platform/: GameTime.cpp  GameTime.h  Input.h  Window.cpp  Window.h
core/Scripting/: ScriptComponent.h  ScriptSystem.cpp  ScriptSystem.h  ScriptableEntity.cpp  ScriptableEntity.h
core/app/: app.cpp  app.h  window.cpp  window.h
core/game_math/: matrix.h  quaternion.h  vector.h
core/physics/: physics_world.h
core/renderer/: MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.h  Model.cpp  Model.h  ModelComponent.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
core/renderer/opengl/: texture.h
core/scene/: Camera.h  Components.h  Entity.cpp  Entity.h  RenderComponent.h  ScriptableEntity.cpp  ScriptableEntity.h  TransformComponent.h  scene.cpp  scene.h
core/window/: window.h
docs/: app.html  app.js  app.wasm
docs/Diagrams/: system_diagram.excalidraw
docs/How_Its_Made/: main.fdb_latexmk  main.fls  main.tex
resources/shaders/: shader.frag  shader.vert
